# cmake-template

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  fetch.sh  format.sh
src/: main.cpp
